[gd_scene load_steps=20 format=3 uid="uid://b00pp8ivlmu7k"]

[ext_resource type="Texture2D" uid="uid://21utx1fndnnu" path="res://assets/textures/plus.png" id="1_fv4n4"]
[ext_resource type="Script" path="res://app/scenes/mediator.gd" id="1_nh655"]
[ext_resource type="Script" path="res://app/scenes/lesson.gd" id="1_qcm54"]
[ext_resource type="Texture2D" uid="uid://bdub1lpdb5ci1" path="res://assets/textures/minus.png" id="3_bnq68"]
[ext_resource type="Script" path="res://app/scenes/lessons.gd" id="4_ynjh8"]
[ext_resource type="Texture2D" uid="uid://der1o7ecnwbv7" path="res://assets/textures/menuGrid.png" id="5_g0ves"]
[ext_resource type="Script" path="res://app/scenes/parts.gd" id="6_bmqa6"]
[ext_resource type="Texture2D" uid="uid://dih211or7peif" path="res://assets/textures/save.png" id="7_db4le"]
[ext_resource type="Script" path="res://app/scenes/chapter.gd" id="7_n7btn"]
[ext_resource type="Script" path="res://app/scenes/lesson_options.gd" id="9_6x0vf"]
[ext_resource type="Texture2D" uid="uid://g7j6ek2vj7b7" path="res://assets/textures/question.png" id="9_kacer"]
[ext_resource type="Script" path="res://app/scenes/toolbox.gd" id="9_r515v"]
[ext_resource type="Texture2D" uid="uid://bvjyt0snpxndw" path="res://assets/textures/export.png" id="10_c3242"]
[ext_resource type="Texture2D" uid="uid://5m76gyi7m626" path="res://assets/textures/import.png" id="11_0t1ba"]
[ext_resource type="PackedScene" uid="uid://b1whxbip2vb3h" path="res://app/scenes/help.tscn" id="13_p2asw"]
[ext_resource type="PackedScene" uid="uid://8gfdgse005io" path="res://app/scenes/user_icon.tscn" id="14_23cpy"]
[ext_resource type="Texture2D" uid="uid://rsregqlutnqh" path="res://assets/textures/cross.png" id="15_4kbkd"]
[ext_resource type="PackedScene" uid="uid://cilnf2ou1exce" path="res://app/scenes/users.tscn" id="18_jb8pp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wned2"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="lesson" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qcm54")
start_tutor = "res://app/scenes/tutor/tutor_start_lesson.tscn"
metadata/_edit_use_anchors_ = true

[node name="main" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_edit_use_anchors_ = true

[node name="mediator" type="HBoxContainer" parent="main"]
layout_mode = 2
script = ExtResource("1_nh655")
metadata/_edit_use_anchors_ = true

[node name="lessons" type="VBoxContainer" parent="main/mediator"]
layout_mode = 2
script = ExtResource("4_ynjh8")

[node name="title" type="Label" parent="main/mediator/lessons"]
layout_mode = 2
text = "key_title_lessons"
horizontal_alignment = 1
vertical_alignment = 1

[node name="find" type="LineEdit" parent="main/mediator/lessons"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
placeholder_text = "key_title_find"

[node name="list" type="ItemList" parent="main/mediator/lessons"]
layout_mode = 2
size_flags_vertical = 3

[node name="manage" type="HBoxContainer" parent="main/mediator/lessons"]
visible = false
layout_mode = 2

[node name="add" type="TextureButton" parent="main/mediator/lessons/manage"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "key_hint_create_lesson"
texture_normal = ExtResource("1_fv4n4")
ignore_texture_size = true
stretch_mode = 6

[node name="remove" type="TextureButton" parent="main/mediator/lessons/manage"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "key_hint_remove_lesson"
texture_normal = ExtResource("3_bnq68")
ignore_texture_size = true
stretch_mode = 6

[node name="edit_kb" type="TextureButton" parent="main/mediator/lessons/manage"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "key_hint_edit_keyboard"
texture_normal = ExtResource("5_g0ves")
ignore_texture_size = true
stretch_mode = 6

[node name="parts" type="VBoxContainer" parent="main/mediator"]
layout_mode = 2
script = ExtResource("6_bmqa6")

[node name="title" type="Label" parent="main/mediator/parts"]
layout_mode = 2
text = "key_title_parts"
horizontal_alignment = 1
vertical_alignment = 1

[node name="find" type="LineEdit" parent="main/mediator/parts"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
placeholder_text = "key_title_find"

[node name="list" type="ItemList" parent="main/mediator/parts"]
layout_mode = 2
size_flags_vertical = 3

[node name="manage" type="HBoxContainer" parent="main/mediator/parts"]
visible = false
layout_mode = 2

[node name="add" type="TextureButton" parent="main/mediator/parts/manage"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "key_hint_add_part"
texture_normal = ExtResource("1_fv4n4")
ignore_texture_size = true
stretch_mode = 6

[node name="remove" type="TextureButton" parent="main/mediator/parts/manage"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "key_hint_remove_part"
texture_normal = ExtResource("3_bnq68")
ignore_texture_size = true
stretch_mode = 6

[node name="new_part" type="LineEdit" parent="main/mediator/parts/manage"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "key_hint_part_name"
placeholder_text = "key_hint_part_name_holder"

[node name="chapter" type="VBoxContainer" parent="main/mediator"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("7_n7btn")

[node name="Label" type="Label" parent="main/mediator/chapter"]
layout_mode = 2
text = "key_title_symbols"
horizontal_alignment = 1
vertical_alignment = 1

[node name="symbols" type="CodeEdit" parent="main/mediator/chapter"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 26
wrap_mode = 1

[node name="save" type="TextureButton" parent="main/mediator/chapter"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "key_hint_save_symbols"
texture_normal = ExtResource("7_db4le")
ignore_texture_size = true
stretch_mode = 6

[node name="toolbox" type="VBoxContainer" parent="main/mediator"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0
script = ExtResource("9_r515v")

[node name="help" type="TextureButton" parent="main/mediator/toolbox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "key_title_help"
texture_normal = ExtResource("9_kacer")
ignore_texture_size = true
stretch_mode = 5

[node name="export" type="TextureButton" parent="main/mediator/toolbox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "key_tutor_export_lesson"
texture_normal = ExtResource("10_c3242")
ignore_texture_size = true
stretch_mode = 5

[node name="import" type="TextureButton" parent="main/mediator/toolbox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "key_tutor_import_lesson"
texture_normal = ExtResource("11_0t1ba")
ignore_texture_size = true
stretch_mode = 5

[node name="user" type="TextureButton" parent="main/mediator/toolbox"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "key_tutor_import_lesson"
ignore_texture_size = true
stretch_mode = 5

[node name="user_icon" parent="main/mediator/toolbox/user" instance=ExtResource("14_23cpy")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
tooltip_text = "key_hint_users"
show_gear = false
metadata/_edit_use_anchors_ = true

[node name="file_export" type="FileDialog" parent="main/mediator/toolbox"]
title = "Open a Directory"
initial_position = 2
size = Vector2i(682, 300)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="file_import" type="FileDialog" parent="main/mediator/toolbox"]
title = "Open File(s)"
initial_position = 2
size = Vector2i(565, 300)
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.lsn", "*.kbd")

[node name="lesson_options" type="Panel" parent="main"]
visible = false
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_wned2")
script = ExtResource("9_6x0vf")

[node name="margin" type="MarginContainer" parent="main/lesson_options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="main/lesson_options/margin"]
layout_mode = 2

[node name="lang" type="LineEdit" parent="main/lesson_options/margin/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
tooltip_text = "key_title_find"
placeholder_text = "key_title_find"

[node name="lang_list" type="ItemList" parent="main/lesson_options/margin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "key_lang_list"

[node name="author" type="LineEdit" parent="main/lesson_options/margin/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
tooltip_text = "key_title_author"
placeholder_text = "key_title_author"

[node name="title" type="LineEdit" parent="main/lesson_options/margin/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
tooltip_text = "key_title_title"
placeholder_text = "key_title_title"

[node name="HBoxContainer" type="HBoxContainer" parent="main/lesson_options/margin/VBoxContainer"]
layout_mode = 2

[node name="save" type="TextureButton" parent="main/lesson_options/margin/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "key_title_save"
texture_normal = ExtResource("7_db4le")
ignore_texture_size = true
stretch_mode = 5

[node name="reject" type="TextureButton" parent="main/lesson_options/margin/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "key_title_close"
texture_normal = ExtResource("15_4kbkd")
ignore_texture_size = true
stretch_mode = 5

[node name="help" parent="." instance=ExtResource("13_p2asw")]
visible = false
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 272.0
create_lesson = "res://app/scenes/tutor/tutor_create_lesson.tscn"
create_keyboard = "res://app/scenes/tutor/tutor_create_keyboard.tscn"
export = "res://app/scenes/tutor/tutor_export.tscn"
import = "res://app/scenes/tutor/tutor_import.tscn"

[node name="users" parent="." instance=ExtResource("18_jb8pp")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -154.5
offset_top = -251.0
offset_right = 154.5
offset_bottom = 251.0
metadata/_edit_use_anchors_ = true

[connection signal="send_lesson_clicked" from="main/mediator/lessons" to="main/mediator" method="_on_lessons_send_lesson_clicked"]
[connection signal="send_lesson_clicked" from="main/mediator/lessons" to="main/mediator/toolbox" method="_on_lessons_send_lesson_clicked"]
[connection signal="text_submitted" from="main/mediator/lessons/find" to="main/mediator/lessons" method="_on_find_text_submitted"]
[connection signal="item_activated" from="main/mediator/lessons/list" to="main/mediator/lessons" method="_on_list_item_activated"]
[connection signal="item_clicked" from="main/mediator/lessons/list" to="main/mediator/lessons" method="_on_list_item_clicked"]
[connection signal="pressed" from="main/mediator/lessons/manage/add" to="main/lesson_options" method="_on_add_pressed"]
[connection signal="pressed" from="main/mediator/lessons/manage/remove" to="main/mediator/lessons" method="_on_remove_pressed"]
[connection signal="pressed" from="main/mediator/lessons/manage/edit_kb" to="main/mediator/lessons" method="_on_edit_kb_pressed"]
[connection signal="send_part_clicked" from="main/mediator/parts" to="main/mediator" method="_on_parts_send_part_clicked"]
[connection signal="text_submitted" from="main/mediator/parts/find" to="main/mediator/parts" method="_on_find_text_submitted"]
[connection signal="item_activated" from="main/mediator/parts/list" to="main/mediator/parts" method="_on_list_item_activated"]
[connection signal="item_clicked" from="main/mediator/parts/list" to="main/mediator/parts" method="_on_list_item_clicked"]
[connection signal="pressed" from="main/mediator/parts/manage/add" to="main/mediator/parts" method="_on_add_pressed"]
[connection signal="pressed" from="main/mediator/parts/manage/remove" to="main/mediator/parts" method="_on_remove_pressed"]
[connection signal="pressed" from="main/mediator/parts/manage/remove" to="main/mediator/chapter" method="_on_remove_pressed"]
[connection signal="send_chapter_save" from="main/mediator/chapter" to="main/mediator" method="_on_chapter_send_chapter_save"]
[connection signal="pressed" from="main/mediator/chapter/save" to="main/mediator/chapter" method="_on_save_pressed"]
[connection signal="pressed" from="main/mediator/toolbox/help" to="help" method="_on_help_pressed"]
[connection signal="pressed" from="main/mediator/toolbox/export" to="main/mediator/toolbox" method="_on_export_pressed"]
[connection signal="pressed" from="main/mediator/toolbox/import" to="main/mediator/toolbox" method="_on_import_pressed"]
[connection signal="pressed" from="main/mediator/toolbox/user" to="users" method="set_visibility"]
[connection signal="dir_selected" from="main/mediator/toolbox/file_export" to="main/mediator/lessons" method="_on_file_export_dir_selected"]
[connection signal="files_selected" from="main/mediator/toolbox/file_import" to="main/mediator/lessons" method="_on_file_import_files_selected"]
[connection signal="send_need_update" from="main/lesson_options" to="main/mediator/lessons" method="_on_lesson_options_send_need_update"]
[connection signal="text_submitted" from="main/lesson_options/margin/VBoxContainer/lang" to="main/lesson_options" method="_on_lang_text_submitted"]
[connection signal="pressed" from="main/lesson_options/margin/VBoxContainer/HBoxContainer/save" to="main/lesson_options" method="_on_save_pressed"]
[connection signal="pressed" from="main/lesson_options/margin/VBoxContainer/HBoxContainer/reject" to="main/lesson_options" method="_on_reject_pressed"]
[connection signal="send_change_current_user" from="users" to="main/mediator/toolbox" method="set_current_user_icon_symbols"]
